--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -4,10 +4,7 @@ $secondary: #222f3e;
 
 .footer {
   width: 100%;
-  height: 10em;
+  height: 50vh;
+  //clear: both;
   background-color: $secondary;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
 }
