--- a/src/styles/_Global.scss
+++ b/src/styles/_Global.scss
@@ -1,6 +1,5 @@
 
 @import url('https://fonts.googleapis.com/css?family=Oswald|Roboto');
-
 //font-family: 'Oswald', sans-serif;
 //font-family: 'Roboto', sans-serif;
 
@@ -16,3 +15,90 @@ body {
 h1, h2, h3 {
   font-family: 'Roboto', sans-serif;
 }
+
+a {
+  color: snow;
+  text-decoration: none;
+
+  &:hover {
+    color: #feca57;
+    text-decoration: none;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Custom, iPhone Retina */
+   @media only screen and (min-width : 320px) {
+
+   }
+
+   /* Extra Small Devices, Phones */
+   @media only screen and (min-width : 480px) {
+
+   }
+
+   /* Small Devices, Tablets */
+   @media only screen and (min-width : 768px) {
+
+   }
+
+   /* Medium Devices, Desktops */
+   @media only screen and (min-width : 992px) {
+
+   }
+
+   /* Large Devices, Wide Screens */
+   @media only screen and (min-width : 1200px) {
+
+   }
+
+   /*==========  Non-Mobile First Method  ==========*/
+
+   /* Large Devices, Wide Screens */
+   @media only screen and (max-width : 1200px) {
+
+   }
+
+   /* Medium Devices, Desktops */
+   @media only screen and (max-width : 992px) {
+
+   }
+
+   /* Small Devices, Tablets */
+   @media only screen and (max-width : 768px) {
+
+   }
+
+   /* Extra Small Devices, Phones */
+   @media only screen and (max-width : 480px) {
+
+   }
+
+   /* Custom, iPhone Retina */
+   @media only screen and (max-width : 320px) {
+
+   }
