Font-awesome official React package up and running

--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -7,4 +7,14 @@ $secondary: #222f3e;
   height: 50vh;
   //clear: both;
   background-color: $secondary;
+  text-align: center;
+
+  ul {
+    list-style-type: none;
+
+    li {
+      padding: 1em;
+    }
+  }
+
 }
