--- a/src/App.css
+++ b/src/App.css
@@ -529,7 +529,12 @@ pre {
 .footer {
   width: 100%;
   height: 50vh;
-  background-color: #222f3e; }
+  background-color: #222f3e;
+  text-align: center; }
+  .footer ul {
+    list-style-type: none; }
+    .footer ul li {
+      padding: 1em; }
 
 body {
   background-color: #48dbfb;
