--- a/src/App.css
+++ b/src/App.css
@@ -507,30 +507,17 @@ pre {
 @media only screen and (min-width: 300px) {
   .header {
     height: auto;
-    width: 100%;
-    background-color: #222f3e; }
-  .nav {
-    padding: 3em;
-    text-align: center;
-    list-style-type: none;
-    font-size: 1.4em;
-    font-weight: bolder;
-    text-transform: uppercase; }
-  hr {
-    width: 50%;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    border: none;
-    height: .5px;
-    color: snow;
-    background-color: snow; } }
+    width: 100%; }
+  a {
+    padding: 1em; } }
 
 .footer {
   width: 100%;
   height: 50vh;
   background-color: #222f3e;
   text-align: center; }
+  .footer .social-div {
+    padding-top: 3em; }
   .footer ul {
     list-style-type: none; }
     .footer ul li {
@@ -539,14 +526,25 @@ pre {
 body {
   background-color: #48dbfb;
   color: snow;
-  font-family: 'Oswald', sans-serif; }
+  font-family: 'Roboto', sans-serif; }
 
 h1, h2, h3 {
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase; }
+
+h1 {
+  font-size: 3em; }
+
+h2 {
+  font-size: 2.5em; }
+
+h3 {
+  font-size: 1.8em; }
 
 a {
   color: snow;
-  text-decoration: none; }
+  text-decoration: none;
+  font-family: 'Oswald', sans-serif; }
   a:hover {
     color: #feca57;
     text-decoration: none; }
@@ -565,28 +563,72 @@ a {
 @media only screen and (min-width: 300px) {
   .info-section {
     padding-top: 5em;
-    width: 80%;
-    height: 100vh;
+    width: 90%;
+    height: 150vh;
     margin-left: auto;
     margin-right: auto;
-    text-align: center; } }
+    margin-bottom: 10em;
+    text-align: center; }
+  h2 {
+    font-style: italic; }
+  .my-image {
+    max-width: 100%;
+    max-height: 200px;
+    border-radius: 50%;
+    margin-top: 2em;
+    margin-bottom: 2em; }
+  p {
+    font-size: 1.3em;
+    width: 100%;
+    padding-top: 2em;
+    line-height: 1.6;
+    font-weight: 500;
+    text-align: left; } }
 
 @media only screen and (min-width: 300px) {
   .project-section {
-    padding-top: 5em;
-    width: 80%;
+    width: 90%;
     height: 300vh;
     margin-left: auto;
     margin-right: auto;
     text-align: center; }
-    .project-section h2 {
-      font-weight: bolder; }
+    .project-section h3 {
+      margin: auto;
+      padding: 1em; }
+    .project-section hr {
+      margin-bottom: 5em;
+      width: 90%; }
     .project-section ul {
       list-style-type: none; }
       .project-section ul li {
-        padding-top: 6em; }
+        padding-bottom: 10em; }
       .project-section ul p {
-        width: 80%;
+        width: 100%;
         margin: auto;
         padding-top: 1em;
-        font-size: 1.3em; } }
+        font-size: 1.3em;
+        text-align: left;
+        line-height: 1.6;
+        font-weight: 500; }
+    .project-section .project-image {
+      max-width: 100%;
+      max-height: 500px; } }
+
+.nav {
+  background-color: #222f3e;
+  text-align: center;
+  list-style-type: none;
+  font-size: 1.4em;
+  font-weight: bolder;
+  text-transform: uppercase;
+  padding: 3em; }
+
+hr {
+  width: 50%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  height: .5px;
+  color: snow;
+  background-color: snow; }
