--- a/src/styles/_Info.scss
+++ b/src/styles/_Info.scss
@@ -2,18 +2,32 @@
 @media only screen and (min-width : 300px) {
   .info-section {
     padding-top: 5em;
-    width: 80%;
-    height: 100vh;
+    width: 90%;
+    height: 150vh;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10em;
     text-align: center;
+  }
 
-    h1 {
-    }
+  h2 {
+    font-style: italic;
+  }
 
-    h2 {
-    }
+  .my-image {
+    max-width: 100%;
+    max-height: 200px;
+    border-radius: 50%;
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
 
-
+  p {
+    font-size: 1.3em;
+    width: 100%;
+    padding-top: 2em;
+    line-height: 1.6;
+    font-weight: 500;
+    text-align: left;
   }
 }
