--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -1,31 +1,46 @@
 
 @media only screen and (min-width : 300px) {
   .project-section {
-    padding-top: 5em;
-    width: 80%;
+    //padding-bottom: 5em;
+    width: 90%;
     height: 300vh;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
 
-    h2 {
-      font-weight: bolder;
+    h3 {
+      margin: auto;
+      padding: 1em;
+    }
+
+    hr {
+      margin-bottom: 5em;
+      width: 90%;
     }
 
     ul {
       list-style-type: none;
 
       li {
-        padding-top: 6em;
+        padding-bottom: 10em;
       }
 
       p {
-        width: 80%;
+        width: 100%;
         margin: auto;
         padding-top: 1em;
         font-size: 1.3em;
+        text-align: left;
+        line-height: 1.6;
+        font-weight: 500;
       }
     }
+
+    .project-image {
+      max-width: 100%;
+      max-height: 500px;
+    }
+
 
 
   }
