--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -4,13 +4,43 @@ $secondary: #222f3e;
 
 .footer {
   width: 100%;
-  height: 50vh;
+  height: auto;
   //clear: both;
   background-color: $secondary;
   text-align: center;
 
+  .footer-container {
+    height: auto;
+    margin: auto;
+    width: 90%;
+    //background-color: yellow;
+  }
+
+  hr {
+    border: none;
+    height: .5px;
+    color: snow;
+    background-color: snow;
+  }
+
   .social-div {
-    padding-top: 3em;
+    padding-top: 4em;
+    width: 100%;
+    margin: auto;
+  }
+
+  .footer-nav {
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-top: 4em;
+    width: 100%;
+    margin: auto;
+
+  }
+
+  .copyright {
+    padding-top: 7em;
+    padding-bottom: 1em;
   }
 
   ul {
