--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -116,6 +116,10 @@ $secondary: #222f3e;
       padding-top: .5em;
     }
 
+    .social-container li {
+      display: inline;
+    }
+
     .footer-nav {
       text-transform: uppercase;
       font-weight: bold;
