--- a/src/styles/_Info.scss
+++ b/src/styles/_Info.scss
@@ -10,7 +10,7 @@
     text-align: center;
   }
 
-  h2 {
+  h1 {
     font-style: italic;
   }
 
@@ -26,7 +26,7 @@
     font-size: 1.3em;
     width: 100%;
     padding-top: 1em;
-    line-height: 1.6;
+    line-height: 1.8;
     font-weight: 500;
     text-align: left;
   }
@@ -58,7 +58,7 @@
     height: auto;
     //float: left;
     //background-color: yellow;
-    padding: 1em;
+    //padding: 1em;
   }
 
   .description {
@@ -66,7 +66,7 @@
     height: auto;
     margin: auto;
     //background-color: red;
-    padding: 1em;
+    //padding: 1em;
 
     p {
       //width: 80%;
