--- a/src/App.css
+++ b/src/App.css
@@ -791,7 +791,7 @@ a {
         font-weight: 500; }
     .project-section .project-image {
       max-width: 100%;
-      max-height: 500px; } }
+      max-height: 100%; } }
 
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
@@ -817,14 +817,14 @@ a {
         padding: .5em; }
   .image-container {
     position: relative;
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
     display: inline-block;
     background-color: #D3D3D3; }
   .project-image {
     display: block;
     width: 250px;
-    height: 250px; }
+    height: 200px; }
   .overlay {
     position: absolute;
     transition: all .3s ease;
