--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -38,7 +38,7 @@
 
     .project-image {
       max-width: 100%;
-      max-height: 500px;
+      max-height: 100%;
     }
 
   }
@@ -83,8 +83,10 @@
 
   .image-container {
     position: relative;
-    width: 250px;
-    height: 250px;
+    //width: 350px;
+    //height: 250px;
+    width: 100%;
+    height: 100%;
     display: inline-block;
     background-color: #D3D3D3;
   }
@@ -92,7 +94,7 @@
   .project-image {
     display: block;
     width: 250px;
-    height: 250px;
+    height: 200px;
   }
 
   .overlay {
